# api.yaml
@@ -8,6 +8,11 @@ servers:
     description: Development servers
 
 components:
+  security:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     Product:
       type: object
@@ -29,6 +34,49 @@ components:
           example: 5
 
 paths:
+  # --- GROPU: AUTH ---
+  /api/auth/register:
+    post:
+      summary: Daftar user baru (Admin)
+      tags: [Auth]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                username:
+                  type: string
+      responses:
+        200:
+          description: User berhasil dibuat
+
+  /api/auth/login:
+    post:
+      summary: Login untuk mendapatkan Token JWT
+      tags: [Auth]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: "admin@toko.com"
+                password:
+                  type: string
+                  example: "admin123"
+      responses:
+        200:
+          description: Login berhasil (Copy token dari sini)
+
   # --- GROUP: PRODUCTS ---
   /api/products:
     get:
@@ -40,6 +88,8 @@ paths:
     post:
       summary: Tambah produk baru
       tags: [Products]
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -52,9 +102,19 @@ paths:
 
   # --- GROUP: TRANSACTIONS ---
   /api/transactions:
+    get:
+      summary: Ambil semua data transaksi
+      tags: [Transactions]
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: Data Transactions Dashboard
     post:
       summary: Catat transaksi baru (Otomatis kurangi stok)
       tags: [Transactions]
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
