# src/routes/transactionRoutes.js
@@ -1,8 +1,9 @@
 const express = require("express");
 const router = express.Router();
 const transactionController = require("../controllers/transactionController");
+const authenticateToken = require("../middleware/authMiddleware");
 
-router.post("/", transactionController.createTransaction);
-router.get("/", transactionController.getTransactions);
+router.post("/", authenticateToken, transactionController.createTransaction);
+router.get("/", authenticateToken, transactionController.getTransactions);
 
 module.exports = router;
